# sanne-livekit-demo

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  README.md  railway.json
.github/workflows/: security-scan.yml
apps/baseten-agent/: README.md  baseten-config.template.yaml  server.py
apps/baseten-livekit-agent/: .dockerignore  .truss_ignore  Dockerfile  README.md  agent.py  baseten-config.template.yaml  config.yaml  health_server.py  pyproject.toml  start.sh
apps/baseten-livekit-agent/model/: __init__.py  agent_runtime.py  baseten_omnivoice_tts.py  model.py  primed_mistral_tts.py
apps/baseten-livekit-agent/tests/: test_config.py
apps/livekit-agent/: README.md  agent.py  pyproject.toml
apps/livekit-agent/tests/: test_agent_config.py
apps/livekit-web/: README.md  package.json  railway.json  server.mjs  server.test.mjs
apps/livekit-web/public/: app.js  index.html  styles.css
apps/omnivoice-openai/: README.md  config.yaml
apps/omnivoice-openai/tests/: test_config.py
apps/pa-dashboard/: components.json  index.html  nixpacks.toml  package.json  railway.json  server.ts  vite.config.ts
apps/pa-dashboard/agent/: Dockerfile  Dockerfile.duo  README-duo.md  duo_agent.py  duo_topics.example.json  pa_agent.py  pyproject.toml  railway.json
apps/pa-dashboard/agent/tests/: test_agent_contract.py
apps/web/: README.md  index.html  styles.css
data/: baseten-llm-latency-20260423-pass2.json  baseten-llm-latency-20260423.json
data/podcast-66/: sanne-speaking-segments.csv  sanne-speaking-segments.md  transcript_66.json
docs/: baseten-livekit-voice-agent.md
drafts/: antwoord-sanne-2026-04-20.md
scripts/: build-book-topics.py  ocr-book.py  pika-meeting
(+31 files in other folders)
