[project]
name = "pa-agent"
version = "0.1.0"
description = "PA Dashboard voice agent with calendar and email tools"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[mistralai,google,silero,turn-detector]~=1.5",
    "livekit-plugins-noise-cancellation>=0.2.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
